instant run is still broken #chrzplz but everything else works

--- a/testProject/TestApplication/app/src/main/res/values/strings.xml
+++ b/testProject/TestApplication/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TestApplication</string>
-    <string name="text3">works for Eric</string>
+    <string name="text3">works for Eric!</string>
 </resources>
