The service is now toggleable. Use notification to return to main activity

--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">VS_minker_AntiTheftAlarm</string>
+    <string name="on">Service On</string>
+    <string name="off">Service Off</string>
 </resources>
