--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">VS_minker_AntiTheftAlarm</string>
     <string name="on">Service On</string>
     <string name="off">Service Off</string>
+    <string name="settings">settings</string>
 </resources>
