added settings (stored preferences). Delay does not yet have influence

--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="on">Service On</string>
     <string name="off">Service Off</string>
     <string name="settings">settings</string>
+    <string name="Three">Three</string>
+    <string name="two">Two</string>
+    <string name="one">One</string>
+    <string name="sharedprefs">sharedprefs</string>
 </resources>
