--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="two">Two</string>
     <string name="one">One</string>
     <string name="sharedprefs">sharedprefs</string>
+    <string name="delay">delay [s]</string>
+    <string name="sensitivity">sensitivity</string>
+    <string name="key_sensitivity">sensitivity</string>
+    <string name="key_delay">delay</string>
 </resources>
