Default Values for Sensitivity and Delay
this is persistently stored over multiple app launches

--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="sensitivity">sensitivity</string>
     <string name="key_sensitivity">sensitivity</string>
     <string name="key_delay">delay</string>
+    <string name="defaultDelay">2</string>
+    <string name="defaultSensitivity">1</string>
 </resources>
