--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="key_delay">delay</string>
     <string name="defaultDelay">2</string>
     <string name="defaultSensitivity">1</string>
+    <string name="key_SENSOR_LIST">key_SENSOR_LIST</string>
 </resources>
