--- a/Ex2/Webservices/app/src/main/res/values/strings.xml
+++ b/Ex2/Webservices/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Webservices</string>
     <string name="group_name">minker</string>
     <string name="temperature_sensor">Temperature Sensor</string>
+    <string name="task2Button">Task 2</string>
 </resources>
