--- a/Ex2/Webservices/app/src/main/res/values/strings.xml
+++ b/Ex2/Webservices/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Webservices</string>
     <string name="group_name">minker</string>
-    <string name="temperature_sensor">Temperature Sensor</string>
+    <string name="temperature_sensor">Task 1</string>
     <string name="task2Button">Task 2</string>
 </resources>
