Manual Part of Task2 is running
Please excuse the hard-coded address and requests used in the XmlSensor.
The interface made it hard to make this more dynamic.

--- a/Ex2/Webservices/app/src/main/res/values/strings.xml
+++ b/Ex2/Webservices/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="group_name">minker</string>
     <string name="temperature_sensor">Task 1</string>
     <string name="task2Button">Task 2</string>
+    <string name="temperature_display_default">none</string>
+    <string name="t2_temperature_display_default">none</string>
+    <string name="t2_temperature">Temperature: </string>
 </resources>
